--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/server.js",
+      "src": "server.js",
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/backend/server.js"
-    }
+  "routes": [
+    { "src": "/(.*)", "dest": "server.js" }
   ]
 }
