--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,7 @@
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "server.js"
-    }
+  "routes": [
+    { "src": "/(.*)", "dest": "server.js" }
   ]
 }
