--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
+
 {
   "name": "portfolio-backend",
   "version": "1.0.0",
-  "description": "Backend for the personal portfolio website",
-  "main": "server.js",
+  "main": "api/server.js",
   "scripts": {
-    "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@google/genai": "^1.29.0",
+    "serverless-http": "^3.2.0",
     "bcrypt": "^5.1.1",
-    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
   }
 }
