--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
-
 {
   "name": "portfolio-backend",
   "version": "1.0.0",
-  "main": "api/server.js",
+  "main": "api/index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon api/index.js"
   },
   "dependencies": {
     "serverless-http": "^3.2.0",
-    "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.6.5"
+    "mysql2": "^3.6.5",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
