--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "name": "portfolio-backend",
   "version": "1.0.0",
-  "main": "api/index.js",
+  "description": "Backend for the personal portfolio website",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon api/index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "serverless-http": "^3.2.0",
-    "express": "^4.18.2",
+    "@google/genai": "^1.29.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "mysql2": "^3.6.5",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
